gcc/testsuite/g++.dg/diagnostic/two-or-more-data-types-1.C
char int i __attribute__((unused));  // { dg-error "1:two or more data types" }
